Improve logic for focusing the DOM window on page loads to deal with the document of a previously focused iframe still being present.  Fixes bug 170811, clicking a link in an iframe which loads in a parent window causes loss of focus.  r=saari, sr=jst.